--- a/styles/index.css
+++ b/styles/index.css
@@ -13,7 +13,8 @@ header {
   box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.25);
 }
 #header {
-  max-width: 100%;
+  max-width: 90%;
+  margin: 0 auto;
   height: 117px;
   padding: 2%;
   display: flex;
@@ -28,7 +29,7 @@ header {
   list-style: none;
 }
 #nav > li {
-  /* margin-left: 37px; */
+  margin-left: 37px;
 }
 #nav > li a {
   text-decoration: none;
@@ -45,16 +46,13 @@ footer {
 }
 #footer {
   display: flex;
-  max-width: 100%;
+  max-width: 90%;
   justify-content: space-between;
   height: 99px;
-  margin: auto;
+  margin: 0 auto;
   padding: 2%;
 }
-/* #footer img {
-  width: 20%;
-  height: 100px;
-} */
+
 div#nav_footer {
   display: flex;
   flex-direction: column;
@@ -76,7 +74,6 @@ div#links_footer {
   justify-content: center;
   align-items: center;
   width: 289px;
-  /* text-align: center; */
 }
 button.btn-footer {
   display: flex;
@@ -92,8 +89,8 @@ button.btn-footer {
   font-weight: 400;
   color: #ffffff;
 }
-
 /*< ========= Hero_principal ========= > */
+
 section#hero_principal {
   width: 100%;
   height: auto;
@@ -106,7 +103,6 @@ div#hero {
   width: 100%;
   height: 712px;
   display: flex;
-  /* flex-wrap: wrap; */
   justify-content: space-evenly;
   align-items: center;
   margin: auto;
@@ -143,21 +139,24 @@ div#text_hero {
 
 section#modos_financa {
   height: 730px;
+  max-width: 100%;
   background-color: #f7f7f7;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: auto;
+  /* padding: 10%; */
 }
 .modos {
+  max-width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   align-content: center;
   text-align: center;
-  padding: 2%;
 }
 /* ====== Img > section Cursos ====== */
+
 #poupando {
   width: 288px;
   height: 270px;
@@ -171,6 +170,7 @@ section#modos_financa {
   height: 270px;
 }
 /*====== Texto > Sessão cursos ====== */
+
 .text-courses-princ {
   width: 344px;
   height: 29px;
@@ -184,6 +184,7 @@ section#modos_financa {
   height: 60px;
 }
 /*====== Buttom -> Section -> Egresso ====== */
+
 .investimento_btn {
   padding: 15px 50px;
   border-radius: 62px;
@@ -194,6 +195,7 @@ section#modos_financa {
   font-weight: 400;
 }
 /* ====== Section Post sobre ===== */
+
 section#sobre_principal {
   width: 100%;
   height: 730px;
@@ -203,16 +205,16 @@ section#sobre_principal {
   grid-template-rows: 20% 80%;
 }
 #sobre_principal span {
-  width: 50%;
-  height: auto;
+  width: 60%;
+  height: 50px;
   font-size: 37px;
   color: #009688;
   text-align: center;
-  align-self: center;
+  align-self: flex-end;
 }
 #conteudo {
-  width: 80%;
-  height: auto;
+  width: 100%;
+  height: 10px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -221,16 +223,13 @@ section#sobre_principal {
   box-sizing: border-box;
   margin: 0 auto;
 }
-
 .post_1 {
   max-width: 50%;
-  margin: 0 auto;
   display: flex;
   flex-direction: column;
 }
 .post_2 {
   max-width: 50%;
-  margin: 0 auto;
   display: flex;
   flex-direction: column;
 }
@@ -239,7 +238,7 @@ div.post {
   justify-content: center;
   align-items: center;
   gap: 23px;
-  height: 20vh;
+  height: 30vh;
   margin: 20px;
 }
 div.post p {
@@ -248,9 +247,10 @@ div.post p {
   font-weight: 300;
 }
 /* ====== Hero footer Princ ====== */
+
 section#hero_footer {
   width: 100%;
-  height: 100%;
+  height: 730px;
   background: #e5e5e5;
   display: grid;
   align-items: center;
@@ -291,7 +291,6 @@ section#hero_footer {
 }
 .post_footer p {
   width: 67.5%;
-  /* height: 80px; */
   font-size: 18px;
   font-weight: 400;
   color: #000000;
@@ -311,7 +310,6 @@ section#hero_footer {
   font-weight: 400;
 }
 
-/* ====== Responsividade ====== */
 /* ====== Responsividade ====== */
 
 @media screen and (max-width: 1100px) {
@@ -333,19 +331,40 @@ section#hero_footer {
   div#links_footer {
     display: none;
   }
+  .btn_saber_mais {
+    padding: 9px 20px;
+    font-size: 25px;
+  }
 }
-@media screen and (max-width: 805px) {
+@media screen and (max-width: 810px) {
   div#hero img {
     max-width: 60%;
+  }
+  .btn_saber_mais {
+    padding: 9px 20px;
+    font-size: 16px;
+  }
+}
+@media screen and (max-width: 768px) {
+  div.post {
+    margin: 0 auto;
+  }
+  .post_1 {
+    max-width: 100%;
+  }
+  .post_2 {
+    max-width: 100%;
+  }
+  section#sobre_principal {
+    height: 900px;
+    grid-template-rows: 15% 85%;
   }
 }
 
 @media screen and (max-width: 668px) {
-  #nav > li {
-    margin: 0 auto;
-  }
   #nav {
     flex-direction: column;
+    margin: 0 auto;
   }
   #nav > li {
     margin-left: 0;
@@ -354,24 +373,27 @@ section#hero_footer {
     flex-direction: column-reverse;
   }
   section#sobre_principal {
-    width: 100%;
-    grid-template-rows: 10%;
-  }
-  #sobre_principal span {
-    margin: 4% auto;
+    grid-template-rows: auto;
   }
   #conteudo {
-    width: 100%;
     height: auto;
-    display: flex;
-    flex-direction: column;
+    height: 100%;
+    justify-content: center;
   }
-  .post_1 {
+  #sobre_principal span {
+    margin: 0 auto;
+    width: 100%;
+  }
+  .btn_saber_mais {
+    padding: 8px 15px;
+    font-size: 20px;
+  }
+  div.post p {
     max-width: 100%;
+    font-size: 17px;
+    font-weight: 300;
   }
-  .post_2 {
-    max-width: 100%;
-  }
+
   section#hero_footer {
     height: auto;
   }
@@ -380,7 +402,7 @@ section#hero_footer {
   }
   #hero_footer span {
     width: 100%;
-    margin: 0 auto;
+    margin: 2% auto;
   }
   .btn_todos_post {
     margin: 3% auto;
@@ -409,6 +431,7 @@ section#hero_footer {
   }
   #header {
     justify-content: space-around;
+    max-width: 100%;
   }
   #nav {
     row-gap: 5px;
