--- a/styles/blog.css
+++ b/styles/blog.css
@@ -12,7 +12,8 @@ header {
   box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.25);
 }
 #header {
-  max-width: 100%;
+  max-width: 90%;
+  margin: 0 auto;
   height: 117px;
   padding: 2%;
   display: flex;
@@ -37,69 +38,6 @@ header {
   line-height: 23px;
   font-weight: 700;
   text-transform: uppercase;
-}
-/* ====== Footer ====== */
-footer {
-  background-color: #419488;
-  display: flex;
-  justify-content: center;
-}
-#footer {
-  display: flex;
-  width: 100vw;
-  /* max-width: 1440px; */
-  justify-content: space-evenly;
-  height: 207px;
-  margin: auto;
-  padding: 0 128px;
-  box-sizing: border-box;
-}
-div#logo_footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-div#logo_footer img {
-  width: 296px;
-  height: 101.43px;
-}
-div#nav_footer {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-div#nav_footer li,
-a {
-  text-decoration: none;
-  list-style: none;
-  color: #ffffff;
-  font-size: 20px;
-  font-weight: 400;
-  justify-content: center;
-}
-
-div#links_footer {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 289px;
-  /* text-align: center; */
-}
-button.btn-footer {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  height: 51px;
-  background-color: transparent;
-  margin-bottom: 13px;
-  padding: 14px 41px;
-  border-radius: 62px;
-  border-style: solid;
-  border-color: #ffffff;
-  font-size: 20px;
-  font-weight: 400;
-  color: #ffffff;
 }
 
 /* ======= bLog ======= */
@@ -155,11 +93,69 @@ button.btn-footer {
 }
 .blog-post p {
   width: 72.5%;
-  height: 80px;
+  height: auto;
   font-size: 17px;
   font-weight: 300;
   color: #000000;
   margin-top: 2%;
+}
+/* ====== Footer ====== */
+footer {
+  background-color: #419488;
+  height: 207px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  max-width: 100%;
+  justify-content: space-between;
+}
+#footer {
+  width: 90%;
+  display: flex;
+  justify-content: space-around;
+  align-content: center;
+  margin: 0 auto;
+  padding: 2%;
+}
+
+div#nav_footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+div#nav_footer li,
+a {
+  text-decoration: none;
+  list-style: none;
+  color: #ffffff;
+  font-size: 20px;
+  font-weight: 400;
+  justify-content: center;
+}
+
+div#links_footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 289px;
+}
+button.btn-footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  width: 100%;
+  background-color: transparent;
+  padding: 10px 41px;
+  border-radius: 62px;
+  border-style: solid;
+  border-color: #ffffff;
+  font-size: 20px;
+  font-weight: 400;
+  color: #ffffff;
+  margin-top: 5px;
 }
 
 /* ====== Responsividade ====== */
