--- a/styles/contato.css
+++ b/styles/contato.css
@@ -12,7 +12,8 @@ header {
   box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.25);
 }
 #header {
-  max-width: 100%;
+  max-width: 90%;
+  margin: 0 auto;
   height: 117px;
   padding: 2%;
   display: flex;
@@ -38,16 +39,6 @@ header {
   font-weight: 700;
   text-transform: uppercase;
 }
-/* ====== Formulario ====== */
-/* section.contato {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  max-width: 1440px;
-  height: 500px;
-} */
-
 #formulario {
   max-width: 100%;
   display: flex;
@@ -111,28 +102,22 @@ textarea {
 /* ====== Footer ====== */
 footer {
   background-color: #419488;
+  height: 207px;
   display: flex;
-  justify-content: center;
+  flex-direction: row;
+  align-items: center;
+  max-width: 100%;
+  justify-content: space-between;
 }
 #footer {
+  width: 90%;
   display: flex;
-  width: 100vw;
-  /* max-width: 1440px; */
-  justify-content: space-evenly;
-  height: 207px;
-  margin: auto;
-  padding: 0 128px;
-  box-sizing: border-box;
+  justify-content: space-around;
+  align-content: center;
+  margin: 0 auto;
+  padding: 2%;
 }
-div#logo_footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-div#logo_footer img {
-  width: 296px;
-  height: 101.43px;
-}
+
 div#nav_footer {
   display: flex;
   flex-direction: column;
@@ -154,22 +139,23 @@ div#links_footer {
   justify-content: center;
   align-items: center;
   width: 289px;
-  /* text-align: center; */
 }
 button.btn-footer {
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-content: center;
+  align-items: center;
   width: 100%;
-  height: 51px;
   background-color: transparent;
-  margin-bottom: 13px;
-  padding: 14px 41px;
+  padding: 10px 41px;
   border-radius: 62px;
   border-style: solid;
   border-color: #ffffff;
   font-size: 20px;
   font-weight: 400;
   color: #ffffff;
+  margin-top: 5px;
 }
 /* ====== Responsividade ====== */
 
@@ -216,5 +202,9 @@ button.btn-footer {
   }
   #nav {
     row-gap: 5px;
+  }
+  #img-form {
+    width: 300px;
+    height: 300px;
   }
 }
