--- a/styles/cursos.css
+++ b/styles/cursos.css
@@ -12,7 +12,8 @@ header {
   box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.25);
 }
 #header {
-  max-width: 100%;
+  max-width: 90%;
+  margin: 0 auto;
   height: 117px;
   padding: 2%;
   display: flex;
@@ -115,28 +116,22 @@ hr {
 /* ====== Footer ====== */
 footer {
   background-color: #419488;
+  height: 207px;
   display: flex;
-  justify-content: center;
+  flex-direction: row;
+  align-items: center;
+  max-width: 100%;
+  justify-content: space-between;
 }
 #footer {
+  width: 90%;
   display: flex;
-  width: 100vw;
-  /* max-width: 1440px; */
-  justify-content: space-evenly;
-  height: 207px;
-  margin: auto;
-  padding: 0 128px;
-  box-sizing: border-box;
+  justify-content: space-around;
+  align-content: center;
+  margin: 0 auto;
+  padding: 2%;
 }
-div#logo_footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-div#logo_footer img {
-  width: 296px;
-  height: 101.43px;
-}
+
 div#nav_footer {
   display: flex;
   flex-direction: column;
@@ -158,24 +153,24 @@ div#links_footer {
   justify-content: center;
   align-items: center;
   width: 289px;
-  /* text-align: center; */
 }
 button.btn-footer {
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-content: center;
+  align-items: center;
   width: 100%;
-  height: 51px;
   background-color: transparent;
-  margin-bottom: 13px;
-  padding: 14px 41px;
+  padding: 10px 41px;
   border-radius: 62px;
   border-style: solid;
   border-color: #ffffff;
   font-size: 20px;
   font-weight: 400;
   color: #ffffff;
+  margin-top: 5px;
 }
-
 /* ====== Responsividade ====== */
 
 @media screen and (max-width: 1000px) {
@@ -196,8 +191,10 @@ button.btn-footer {
   div#links_footer {
     display: none;
   }
+  .investimento {
+    gap: 20px;
+  }
 }
-
 @media screen and (max-width: 668px) {
   #nav > li {
     margin: 0 auto;
@@ -211,9 +208,12 @@ button.btn-footer {
     padding: auto auto;
   }
   .container img {
+    width: 380px;
   }
   .investimento {
     max-width: 100%;
+    align-items: center;
+    gap: 20px;
     justify-content: center;
   }
   button#btn-cursos {
@@ -241,8 +241,9 @@ button.btn-footer {
     color: #555555;
     margin-left: 20px;
   }
-  h2 {
-    font-size: 25px;
+  .investimento h2 {
+    width: 100%;
+    font-size: 28px;
     margin: 2%;
   }
   #title-cursos {
