header flex column

--- a/styles/blog.css
+++ b/styles/blog.css
@@ -194,8 +194,12 @@ button.btn-footer {
   #nav > li {
     margin: 0 auto;
   }
-  #nav {
+  #header {
     flex-direction: column;
+  }
+  #nav {
+    gap: 30px;
+    /* flex-direction: column; */
   }
 }
 
